2007-07-12  Akim Demaille  <akim.demaille@gmail.com>

	Use "type" just as IO does
	* src/object/object.hh, src/object/object.cc (lookup_set_type): Now
	const.
	(lookup): Now const too.
	(lookup): New, not const.
	(id_lookup): New.
	Use "type", not "name".
	* src/object/object-test-lookup.cc, src/object/object-test-parent.cc,
	* src/object/object-test-slot.cc, src/object/object-test.cc:
	Use "type", not "name".

2007-07-12  mefyl  <mefyl@lrde.epita.fr>

		merge -r 1261:1269 https://svn.gostai.com/svn/kernel1/trunk
	2007-07-12  mefyl  <mefyl@lrde.epita.fr>
	Update the test suite external.

	2007-07-12  mefyl  <mefyl@lrde.epita.fr>
	merge -r 1259:1266 https://svn.gostai.com/svn/kernel1/branches/1.0

	2007-07-12  mefyl  <mefyl@lrde.epita.fr>
	Warn on use of operator ^. Add operator **.
	* src/parser/uparser.cc,
	* src/parser/uparser.hh: Add a mehod to emit warnings.
	* src/parser/bison/utoken.l: Emit warnings on ^.
        Scan ** as exponent operator.
	* src/uconnection.cc,
	* src/uexpression.cc: Report warnings through the connection.

2007-07-12  Akim Demaille  <akim.demaille@gmail.com>

	CallExp::printer
	* src/ast/ast.yml (CallExp::printer): Output the target.
	* src/object/atom.hh: Space changes.

2007-07-12  Akim Demaille  <akim.demaille@gmail.com>

	Add some primitives for Floats
	* src/object/fwd.hh (float_traits, Float, rFloat, integer_traits)
	(Integer, rInteger, string_traits, String, rString): Fwd decl
	or declare them.
	* src/object/atom.cc, src/object/atom.hh, src/object/atom.hxx:
	(kind_type, string_of): New.
	(kind_get): Now return the kind, not a string.
	* src/object/object.cc, src/object/object.hh, src/object/object.hxx:
	(float_class_add, float_class_div, float_class_mul, float_class_sub):
	New.

	* src/object/object-test-primitives.cc: New.
	* src/object/Makefile.am: Adjust.

2007-07-12  mefyl  <mefyl@lrde.epita.fr>

	merge -r 1216:1261 https://svn.gostai.com/svn/kernel1/trunk
	2007-07-12  mefyl  <mefyl@lrde.epita.fr>