@@ -476,13 +476,7 @@ CallExp:
         type: 'exps_type*'
         desc: Arguments passed to the function
   printer:
-    - '{
-         if (n.target_get())
-           {
-             n.target_get()->accept(*this);
-             ostr_ << " . ";
-           }
-       }'
+    - ~target
     - $name
     - '"("'
     - libport::separate (n.args_get (), libport::make_pair (',', libport::iendl));
