@@ -1,3 +1,9 @@
+2007-07-12  mefyl  <mefyl@lrde.epita.fr>
+
+	Test pointers before dereferencing them in pretty-printer generator.
+	* dev/ast-pretty-printer-gen: Here.
+	* src/ast/ast.yml: Replace now useless hack.
+
 2007-07-12  Akim Demaille  <akim.demaille@gmail.com>
 
 	Use "type" just as IO does
